# scorelisto

./: .gitignore  CMakeLists.txt  README.md
cli/: CMakeLists.txt  scorelisto.cpp
docs/: ffmpeg.drawio
gui/: CMakeLists.txt  main.cpp
gui/controller/: ScoreListoController.cpp  ScoreListoController.hpp
gui/model/: ScoreListoModel.cpp  ScoreListoModel.hpp
gui/view/: ScoreListoView.cpp  ScoreListoView.hpp
gui/view/AdvancedConverterWidget/: AdvancedConverterWidget.cpp  AdvancedConverterWidget.hpp
gui/view/HomeWidget/: HomeWidget.cpp  HomeWidget.hpp
gui/view/HomeWidget/FileSelectorWidget/: FileSelectorWidget.cpp  FileSelectorWidget.hpp
gui/view/HomeWidget/RecorderWidget/: RecorderWidget.cpp  RecorderWidget.hpp
gui/view/HomeWidget/StreamSelectorWidget/: StreamSelectorWidget.cpp  StreamSelectorWidget.hpp
gui/view/common/AudioPlayerWidget/: AudioPlayerWidget.cpp  AudioPlayerWidget.hpp
gui/view/common/ParametersWidget/: AudioReaderParametersWidget.cpp  AudioReaderParametersWidget.hpp  McLeodParametersWidget.cpp  McLeodParametersWidget.hpp  RhythmParametersWidget.cpp  RhythmParametersWidget.hpp  StepParametersWidget.cpp  StepParametersWidget.hpp  TimeRangeParametersWidget.cpp  TimeRangeParametersWidget.hpp
gui/view/common/PlotWidget/: PlotWidget.cpp  PlotWidget.hpp
gui/view/common/ProgressBarWidget/: ProgressBarWidget.cpp  ProgressBarWidget.hpp
gui/view/common/ScorePlotWidget/: ScorePlotWidget.cpp  ScorePlotWidget.hpp
include/: MidiScore.hpp  common_tools.hpp
include/1_PitchDetector/: AudioReader.hpp  FFmpegAudioReader.hpp  McLeodPitchExtractorMethod.hpp  PitchDetector.hpp  PitchExtractorMethod.hpp
include/2_StepDetector/: CumulativeSumThreshold.hpp  HistogramStepDetector.hpp  HysteresisThreshold.hpp  StepDetector.hpp
include/3_NoteDetector/: MusicXmlScore.hpp  NoteDetector.hpp
include/3_NoteDetector/HeightDetector/: HeightDetector.hpp
include/3_NoteDetector/RhythmDetector/: Combinations.hpp  Dijkstra.hpp  RhythmDetector.hpp
src/: CMakeLists.txt  MidiScore.cpp  common_tools.cpp
src/1_PitchDetector/: AudioReader.cpp  FFmpegAudioReader.cpp  McLeodPitchExtractorMethod.cpp  PitchDetector.cpp  PitchExtractorMethod.cpp
src/2_StepDetector/: CumulativeSumThreshold.cpp  HistogramStepDetector.cpp  HysteresisThreshold.cpp  StepDetector.cpp
src/3_NoteDetector/: MusicXmlScore.cpp  NoteDetector.cpp
src/3_NoteDetector/HeightDetector/: HeightDetector.cpp
src/3_NoteDetector/RhythmDetector/: Dijkstra.cpp  RhythmDetector.cpp
tests/: CMakeLists.txt  common_toolsTest.cpp
tests/1_PitchDetector/: FFmpegAudioReaderTest.cpp  McLeodPitchExtractorMethodTest.cpp  PitchDetectorTest.cpp
tests/2_StepDetector/: CumulativeSumThresholdTest.cpp  HistogramStepDetectorTest.cpp  HysteresisThresholdTest.cpp
tests/3_NoteDetector/: DijkstraTest.cpp  HeightDetectorTest.cpp  RhythmDetectorTest.cpp
tests/sound_samples/: whistling_stereo.flac
